--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,12 +17,12 @@ html.dark {
 }
 
 #nprogress .bar {
-  background: rgb(13,148,136);
+  background: #ea580c;
   opacity: 0.75;
   position: fixed;
   z-index: 1031;
   top: 0;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: 4px;
 }
