--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,6 +3,9 @@
 
 :root {
   --accent: #ea580c;
+  --c-bg: #fff;
+  --c-scrollbar: #eee;
+  --c-scrollbar-hover: #bbb;
 }
 
 html,
@@ -11,10 +14,13 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: var(--c-bg);
 }
 
 html.dark {
-  background: rgb(6, 6, 6);
+  --c-bg: #050505;
+  --c-scrollbar: #111;
+  --c-scrollbar-hover: #222;
 }
 
 #nprogress {
@@ -30,4 +36,26 @@ html.dark {
   left: 0;
   width: 100%;
   height: 4px;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar:horizontal {
+  height: 6px;
+}
+
+::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
+  background: var(--c-bg);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--c-scrollbar);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--c-scrollbar-hover);
 }
